<resources>

    <string name="app_name">TRAYS</string>
    <string name="srartBtn">GET START</string>
    <string name="signup">Sign Up</string>
    <string name="admin">Admin</string>
    <string name="shop">Shop</string>

    <string name="login">Sign In</string>
    <string name="username">user name</string>
    <string name="login_password">Password</string>
    <string name="loginbtn">Log In</string>

    <string name="customer_name">Name</string>
    <string name="customer_email">Email</string>
    <string name="customer_address">Address</string>
    <string name="customer_telephone">Telephone</string>
    <string name="customer_password">Password</string>
    <string name="user_signupBtn">Sign Up</string>

    <string name="emil">email</string>
    <string name="deleteBtn">Delete</string>

    <string name="shopname">Shop name</string>
    <string name="shopaddress">shopAddress</string>
    <string name="open">Open or Close</string>
    <string name="update_shop">Update Shop</string>


    <string name="shop_name">Shop Name</string>
    <string name="shop_email">Email</string>
    <string name="shop_location">Location</string>
    <string name="shop_telephone">Telephone</string>
    <string name="shop_password">Password</string>
    <string name="shop_signupBtn">Sign Up</string>
    <string name="promotion_foodname">Food Name</string>
    <string name="promotion_description">Description</string>
    <string name="promotion_price">Price</string>
    <string name="promotion_orderbtn">Order</string>

    <string name="food_name">Food name</string>
    <string name="food_price">Food price</string>
    <string name="food_description">Food Descrition</string>
    <string name="accept">Accept</string>
    <string name="order">Order Now</string>

    <string name="Vieworder"> View Orders</string>
    <string name="AddFood"> Add Foods</string>
    <string name="AddShopes">Add Shops</string>
    <string name="RemoveUsers">Manage Users</string>
    <string name="RemoveShops">Manage Shops</string>
    <string name="logout">Log out</string>
    <string name="edit_profile">Edit profile</string>


    <string name="showdetails_name">Cheese Lovers + Pepper Chicken Pizza</string>
    <string name="showdetails_price">LKR 900.99</string>
    <string name="showdetails_INCRE">+</string>
    <string name="showdetails_decre">-</string>
    <string name="showdetails_value">7</string>
    <string name="showdetails_tot">Total Price  = LKR. </string>
    <string name="showdetails_ADDCART">Add to Cart</string>
    <string name="showdetails_description">Pieces of devilled beef complemented by fresh capsicums, onions and a double layer of mozzarella cheese.A fiery mix of prawns, devilled fish, olives, bell peppers and onions with a double layer of mozzarella cheese.</string>
    <string name="add_item">Add Item</string>
    <string name="add_promotion_item">Add Promotion</string>
    <string name="add_image">Add Image</string>


    <string name="add_shop">Add Shop</string>
    <string name="add">Add</string>

    <string name="view_orders">View Orders</string>
    <string name="add_foods">Add Foods</string>
    <string name="manage_foods">Manage Foods</string>
    <string name="manage_shops">Manage Shops</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_promotions">Manage Promotions</string>

    <string name="update">Update</string>
    <string name="Edit">Edit</string>


    <string name="orders_list_customer">Add to Shop</string>

    <string name="managefood_update">UPDATE</string>
    <string name="managefood_delete">DELETE</string>

    <string name="delivaryval">LKR 00.00</string>

    <string name="promodisval">LKR 00.00</string>
    <string name="Subtotal">Subtotal</string>
    <string name="Subtotalval">LKR 2623.00</string>
    <string name="processtocheck">Procced to Checkout</string>

    <string name="ordernow">Order Now</string>
    <string name="ordername">order name</string>
    <string name="orderdes">order description</string>
    <string name="ordersprice">order price</string>


    <string name="tax">Tax</string>
    <string name="delivary">Delivery Charges</string>
    <string name="your_cart">Your Food cart</string>

    <string name="cart_tot">Cart total</string>
    <string name="promodis">Promo discount</string>
    <string name="cart_totval">LKR 2523.00</string>
    <string name="taxval">LKR 100.00</string>
    <string name="dashboard">dashboard</string>
    <string name="promotion">promotion</string>
    <string name="serach">serach</string>
    <string name="profile">profile</string>
    <string name="signout">signout</string>
    <string name="Open">Open</string>
    <string name="close">close</string>
    <string name="shops">shops</string>
    <string name="search_shop">Search Shop Name ....</string>

    //


    <string name="layout_foodname">Food Name</string>
    <string name="layout_foodprice">LKR 160</string>

    <string name="final_N">Cheeze Pizza - Crispy </string>
    <string name="final_quantity">Quantity :</string>
    <string name="final_Tot">Total Price :</string>
    <string name="final_enter_username">Your Name :</string>
    <string name="final_enter_username1"></string>
    <string name="final_enter_contact">Contact No :</string>
    <string name="final_enter_contact1"></string>
    <string name="final_enter_placeAOredr">Place a Order</string>
    <string name="final_enter_cancelOredr">Cancel a Order</string>
    <string name="final_Q">7</string>
    <string name="final_P">LKR 1200.00</string>
    <string name="LKR">LKR</string>

    <string name="order_cusname">Customer_name</string>
    <string name="BuyNow">Buy Now</string>
    <!--  <string name="BuyNow">Buy Now</string>
    <string name="BuyNow">Buy Now</string>
    <string name="BuyNow">Buy Now</string>&ndash;&gt;-->

    <string name="SearchFoods">Search Foods Here...</string>
    <string name="owner">Shop Owner</string>
    <string name="allshops">View shops</string>
    <string name="search_promo">Search Promo</string>
    <string name="search_foods">Search Foods</string>


</resources>
