<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceAOrderFinalActivity">


    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="346dp"
        android:layout_height="158dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/pizza3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemenamee"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="129dp"
        android:text="@string/final_N"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView33" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/final_quantity"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/quantityy"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemenamee" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="42dp"
        android:text="@string/final_Tot"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:text="@string/final_enter_username"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/final_enter_contact"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <TextView
        android:id="@+id/quantityy"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginEnd="36dp"
        android:text="@string/final_Q"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totals"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="36dp"
        android:text="@string/final_P"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView33" />

    <EditText
        android:id="@+id/unames"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/final_enter_username1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView44" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/final_enter_contact1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView55" />

    <Button
        android:id="@+id/button22"
        android:layout_width="199dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="97dp"
        android:background="@drawable/low_rounded_shape"
        android:backgroundTint="@color/HomeTxt"
        android:text="@string/final_enter_placeAOredr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="199dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/low_rounded_shape"
        android:backgroundTint="@color/HomeTxt"
        android:text="@string/final_enter_cancelOredr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button22" />



</android.support.constraint.ConstraintLayout>