<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_update"
    android:background="@drawable/signup">


    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/startBtn"
        android:text="@string/Edit"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateShopName"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_shape"
        android:ems="10"
        android:hint="@string/customer_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateShopAddress"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_shape"
        android:ems="10"
        android:hint="@string/customer_email"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateShopName" />

    <EditText
        android:id="@+id/updateShopEmail"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_shape"
        android:ems="10"
        android:hint="@string/customer_address"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateShopAddress" />

    <EditText
        android:id="@+id/updateShopPhone"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_shape"
        android:ems="10"
        android:hint="@string/customer_telephone"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/updateUserPassword"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_shape"
        android:ems="10"
        android:hint="@string/customer_password"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateShopEmail" />

    <Button
        android:id="@+id/btnUpdateUser"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/shapebtn"
        android:text="@string/update"
        android:textColor="@color/Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btndeleteUser" />

    <Button
        android:id="@+id/btndeleteUser"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/shapebtn"
        android:text="@string/deleteBtn"
        android:textColor="@color/Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdateUser"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnsearchUser"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/shapebtn"
        android:text="@string/serach"
        android:textColor="@color/Home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>