<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shop_update"
    android:background="@drawable/shopreg">


    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/startBtn"
        android:padding="10dp"
        android:text="@string/update_shop"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateShopName"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_shape"
        android:ems="10"
        android:hint="@string/shop_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateShopPhone" />

    <EditText
        android:id="@+id/updateShopAddress"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_shape"
        android:ems="10"
        android:hint="@string/shop_location"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateShopName" />

    <EditText
        android:id="@+id/updateShopEmail"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_shape"
        android:ems="10"
        android:hint="@string/shop_email"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateShopAddress" />


    <EditText
        android:id="@+id/updateShopPhone"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/rounded_shape"
        android:ems="10"
        android:hint="@string/shop_telephone"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/updateShopName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/updateShopOwner"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="61dp"
        android:background="@drawable/rounded_shape"
        android:hint="@string/owner"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateShopEmail" />

    <Button
        android:id="@+id/btnUpdateShop"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shapebtn"
        android:text="@string/update"
        android:textColor="@color/Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btndeleteShop"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shapebtn"
        android:text="@string/deleteBtn"
        android:textColor="@color/Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnSearchShop"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shapebtn"
        android:text="@string/serach"
        android:textColor="@color/Home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/updateShopPhone"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>